[package]
name = "refs"
version = "0.23.1"
edition = "2024"
authors = ["Vladas Zakrevksis <146100@gmail.com>"]
description = "My vision of reference counting"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/VladasZ/refs"
repository = "https://github.com/VladasZ/refs"

[lib]
name = "refs"
crate-type = ["rlib", "staticlib", "dylib"]

[features]
default = ["checks"]
checks = []
stats = []

[dependencies]
log = "~0.4"
instant = { version = "~0.1", features = ["wasm-bindgen"] }
derive_more = { version = "~2.1", features = ["deref", "deref_mut"] }

[dev-dependencies]
serial_test = "~3.2"
wasm-bindgen-test = "~0.3"
pretty_assertions = "~1.4"
