
[package]
authors = ["Vladas Zakrevksis <146100@gmail.com>"]
description = "My vision of reference counting and resources management designed for GUI applications."
edition = "2024"
homepage = "https://github.com/VladasZ/refs"
license = "MIT OR Apache-2.0"
name = "refs"
repository = "https://github.com/VladasZ/refs"
version = "0.43.0"

[lib]
crate-type = ["dylib", "rlib", "staticlib"]
name = "refs"

[features]
checks = []
default = ["checks", "serde"]
pointers_info = []
serde = ["dep:serde"]
stats = []

[dependencies]
anyhow = "1.0"
derive_more = { version = "2.1", features = ["deref", "deref_mut"] }
hreads = "0.13"
instant = { version = "0.1", features = ["wasm-bindgen"] }
log = "0.4"
parking_lot = "0.12"
reqwest = { version = "0.13", default-features = false, features = ["rustls"] }
serde = { version = "1.0", optional = true }

[dev-dependencies]
pretty_assertions = "1.4"
serial_test = "3.3"
wasm-bindgen-test = "0.3"
